# svg-to-canvas-extractor

./: README.md  consumes-produces.json  pyproject.toml  zoo-project.json
docs/manual/: commands.txt  expanded-json.txt  formats.txt  layers.txt
docs/raw/: 0001__svg2canvasx_cli_tool.json  0002__svg2canvasx_package_flow-file-use.json  0003__development-context-resources.json
src/svg2canvasx/: __init__.py  cli.py  extract.py  flow.py  geometry.py  output.py  preview.py  semantics.py  styles.py  svgparse.py  transforms.py
tests/: test_cli.py  test_extract_basic.py  test_flow.py  test_preview.py  test_semantics.py  test_styles.py  test_transforms.py
