[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "svg2canvasx"
version = "0.1.0"
description = "Stage 1 SVG to normalized JSON extractor"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "CC0-1.0" }

[project.scripts]
svg2canvasx = "svg2canvasx.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
